--- a/service/auth_callback.html
+++ b/service/auth_callback.html
@@ -1,2 +1,6 @@
-Congrats! You've just found a super secret site page!
+---
+layout: default
+title: Super secret site page
+---
+<h2>Congrats! You've just found a super secret site page!</h2>
 <link rel='redirect_uri' href='hass://auth'>
