--- a/service/auth_callback.html
+++ b/service/auth_callback.html
@@ -1,6 +1,5 @@
 ---
-layout: default
+layout: auth_callback
 title: Super secret site page
 ---
-<h2>Congrats! You've just found a super secret site page!</h2>
-<link rel='redirect_uri' href='hass://auth'>
+<h2>Loading...</h2>
