--- a/service/auth_callback.html
+++ b/service/auth_callback.html
@@ -3,3 +3,4 @@ layout: auth_callback
 title: Super secret site page
 ---
 <h2>Loading...</h2>
+<a href="https://haclient.page.link/ha_auth">Back to HA Client</a>
